Fix the paginator to be centered if it wraps to a new line

--- a/app/assets/stylesheets/replies.scss
+++ b/app/assets/stylesheets/replies.scss
@@ -333,13 +333,11 @@
   color: black;
   .left-align {
     float: left;
-    display: inline-block;
     padding: 10px;
   }
   .right-align {
     padding: 2px;
     padding-right: 10px;
-    display: inline-block;
     float: right;
 
     a { color: black; }
